kubernetes/api-city/api-city-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-city
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-city
  template:
    metadata:
      labels:
        app: api-city
    spec:
      containers:
        - name: api-city
          image: api-city-java:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 5
            failureThreshold: 3
