kubernetes/api-city/api-city-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-city
spec:
  selector:
    app: api-city
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
